<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/videoBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:adjustViewBounds="true" />

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingTop="200dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/label_fuels"
            android:textColor="@color/white"
            android:textSize="11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:divider="@drawable/divider"
            android:showDividers="middle"
            android:dividerPadding="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnFuel1Select"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingStart="10dp"
                        android:text="@string/action_select"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:backgroundTint="@color/background_input"
                        app:cornerRadius="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/white"
                        app:strokeWidth="2dp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="15dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/icon_circle_right"
                        app:layout_constraintBottom_toBottomOf="@id/btnFuel1Select"
                        app:layout_constraintEnd_toEndOf="@id/btnFuel1Select"
                        app:layout_constraintTop_toTopOf="@id/btnFuel1Select" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/labelFuel1Consumption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_consumption"
                        android:textSize="9sp"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintVertical_bias="0.4" />

                    <LinearLayout
                        android:id="@+id/containerFuel1Consumption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        android:padding="8dp"
                        app:layout_constraintStart_toEndOf="@id/labelFuel1Consumption"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <TextView
                            android:id="@+id/tvFuel1Consumption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_consumption"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="10sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/dashed_line" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnFuel2Select"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingStart="10dp"
                        android:text="@string/action_select"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:backgroundTint="@color/background_input"
                        app:cornerRadius="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/white"
                        app:strokeWidth="2dp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/icon_circle_right"
                        android:importantForAccessibility="no"
                        app:layout_constraintBottom_toBottomOf="@id/btnFuel2Select"
                        app:layout_constraintEnd_toEndOf="@id/btnFuel2Select"
                        app:layout_constraintTop_toTopOf="@id/btnFuel2Select" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/labelFuel2Consumption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_consumption"
                        android:textSize="9sp"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintVertical_bias="0.4" />

                    <LinearLayout
                        android:id="@+id/containerFuel2Consumption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        android:padding="8dp"
                        app:layout_constraintStart_toEndOf="@id/labelFuel2Consumption"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <TextView
                            android:id="@+id/tvFuel2Consumption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_consumption"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="10sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/dashed_line" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_price"
            android:textSize="11dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:divider="@drawable/divider"
            android:showDividers="middle"
            android:dividerPadding="8dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/background_input"
                app:cardCornerRadius="0dp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etFuel1Price"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:inputType="numberDecimal"
                        android:paddingStart="50dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvFuel1Currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/currency_real"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/background_input"
                app:cardCornerRadius="0dp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etFuel2Price"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:inputType="numberDecimal"
                        android:paddingStart="50dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvFuel2Currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/currency_real"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/btn_calculate"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@color/background_button"
            app:cornerRadius="0dp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />

    </LinearLayout>
</FrameLayout>